# aws-bedrock-prompt-optimization-workshop

./: .env.example  .gitignore  README.md  requirements.txt  ruff.toml
01-basics/: 01-prompts-101.ipynb  02-optimization-strategy.ipynb  03-langfuse-observability.ipynb  README.md
01-basics/data/: product_manual.txt
01-basis/: 01-prompts-101.ipynb  02-optimization-strategy.ipynb  README.md
01-fundamentals/: 01-getting-started.ipynb
01-theory-foundations/: 01-economics-of-optimization.ipynb  02-understanding-prompt-caching.ipynb  README.md
02-best-practices/: 01-prompt-caching.ipynb  README.md
02-developer-journey/: 00-intro-to-strands-agent.ipynb  01-baseline-agent.ipynb  02-quick-wins.ipynb  03-prompt-caching.ipynb  04-llm-routing.ipynb  05-guardrails.ipynb  06-agentcore-gateway.ipynb  07-evaluations.ipynb  Makefile  README.md
03-advanced-concepts/: 01-advanced-prompt-caching.ipynb  01-advanced-prompt-engineering.ipynb  02-advanced-prompt-caching.ipynb  README.md
03-developer-journey/: .env.example  .gitignore  01-baseline-agent.ipynb  02-quick-wins.ipynb  03-prompt-caching.ipynb  04-llm-routing.ipynb  05-guardrails.ipynb  06-agentcore-gateway.ipynb  07-evaluations.ipynb  Makefile  README.md  main.py  pyproject.toml  requirements-for-agentcore.txt
03-developer-journey/agents/: v1_baseline.py  v2_quick_wins.py  v3_caching.py  v4_routing.py  v5_guardrails.py  v6_gateway.py
03-developer-journey/utils/: __init__.py  agent_config.py  eval_helpers.py  langfuse_metrics.py  langfuse_setup.py  metrics.py  runtime_helpers.py  tools.py
(+40 files in other folders)
